Breaks in Presence into new section, moved absence definition (W&W terms).

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -497,9 +497,9 @@ Also related is the concept of \textit{involvement}, defined in this context as 
 \label{waterworthandwaterworth}
 \newcommand{\presencefootnote}{\footnote{\textbf{Presence} in the context of this model is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, covering cases both in which the environmental stimuli originate from the subject's immediate real surroundings (\textit{unmediated presence}) and when the environmental stimuli originate from a remote real environment, virtual environment or mixed reality environment (\textit{mediated presence})~\cite{Mantovani2010}.}}
 
-\newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}, with total presence (in the above definition) and total absence representing opposite poles along the continuum of the focus of attention axis~\cite{Mantovani2010}.}}
+\newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}, as \textit{``presence in an exclusively mental activity''}~\cite{Giuseppe2014}, with total presence (in the above definition) and total absence representing opposite poles along the continuum of the focus of attention axis~\cite{Mantovani2010}.}}
 
-Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model (figure \ref{focus-locus-sensus-original}) for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in the wider alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience, which allows the separate consideration of which environment a user is attending to the stimuli of and how \textit{much} they are attending to these stimuli (wherever they may come from), is diagnostic in the investigation of the experience of parallel reality systems that promote the transition between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned.
+Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model (figure \ref{focus-locus-sensus-original}) for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in the wider alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience, which allows the separate consideration of which environment a user is attending to the stimuli of and how \textit{much} they are attending to these stimuli (wherever they may come from), is diagnostic in the investigation of the experience of parallel reality systems that promote the transition between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned (see section \ref{background-breaks-in-presence}).
 
 \begin{figure}[h]
 	\begin{center}
@@ -564,7 +564,13 @@ Furthermore, the notion of experience of presence as changing continually from m
 
 %HyperReality p148
 
-However no matter how smooth the transition between real and virtual, the process is expected to nonetheless result in some heightened cognitive load, a temporary `break in presence' (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is that introduced by Waterworth and Waterworth for the purposes of their three dimensions of virtual experience model~\cite{Waterworth2001}. Here, a break in presence represents a movement along the focus of attention axis away from presence in either a real, a virtual, or a mixed reality environment and toward absence. This differs to Slater and Steed's earlier usage of the term~\cite{Slater2000} wherein they considered presence in terms of `virtual presence', where a break in presence is a Gestalt switch from a sense of presence in a virtual environment to a sense of presence in the real environment.
+%=========================================================================================================
+
+\subsection{Breaks in Presence}
+
+\label{background-breaks-in-presence}
+
+No matter how smooth the transition between real and virtual, the process is expected to nonetheless result in some heightened cognitive load, a temporary `break in presence' (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is that introduced by Waterworth and Waterworth for the purposes of their three dimensions of virtual experience model~\cite{Waterworth2001}. Here, a break in presence represents a movement along the focus of attention axis away from presence in either a real, a virtual, or a mixed reality environment and toward absence. This differs to Slater and Steed's earlier usage of the term~\cite{Slater2000} wherein they considered presence in terms of `virtual presence', where a break in presence is a Gestalt switch from a sense of presence in a virtual environment to a sense of presence in the real environment.
 
 \begin{quote}
 	\textit{``When in a virtual environment, presence is typically shared between the VR and the physical world. `Breaks in presence' are actually shifts of presence away from the VR and toward the external environment. But we can also have `breaks in presence' when attention moves toward absence - when an observer is not attending to stimuli present in the virtual environment, nor to stimuli present in the surrounding physical environment''}~\cite{Waterworth2001}
