--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -571,7 +571,7 @@ However considering a parallel reality scenario within the same framework, senso
 
 \item \textbf{Perceptual or `core' presence}, as the ability of a subject to identify the external world and its current tasks in that world as separate from the self.
 
-\item \textbf{Reflective or `extended' presence}, as the ability of a subject to verify to itself the significance of experienced events in the external world and which leads to the ability to experience absence, situated at one extreme of the focus of attention axis, as \textit{``presence in an exclusively mental activity''}~\cite{Giuseppe2014}.
+\item \textbf{Reflective or `extended' presence}, as the ability of a subject to verify to itself the significance of experienced events in the external world and which leads to the ability to experience absence, situated at the extreme of the focus of attention axis opposite presence.
 
 \end{enumerate}
 
@@ -583,7 +583,7 @@ Each of these three levels is associated with one of Damasio's evolutionary leve
 
 While RW experiences rarely feature conflict between the proto-presence and core presence layers, VR experiences often present such conflict due to mismatch between physical actions and perceived (virtual) results owing to the conflicting content of the two environments. A parallel reality system whose two constituent environments share high spatial equivalence however, should not present such a mismatch between proto- and core presence layers.
 
-The implication this has upon the suitability of established presence questionnaires to parallel reality platforms is perhaps best illustrated by appreciation of the lack of consensus when it comes to the definition of the term `presence'~\cite{Calleja2014} (and thus `break in presence'), with many questionnaire authors using the term to mean only \textit{mediated} presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}. Visualised using the combined Milgram/Waterworth model, established presence questionnaires in this vein largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence is here considered under the Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}) as a shift upon the locus of attention axis from VR to RW.
+The implication this has upon the suitability of established presence questionnaires to parallel reality platforms is perhaps best illustrated by appreciation of the lack of consensus when it comes to the definition of the term `presence'~\cite{Calleja2014} (and thus `break in presence'), with many questionnaire authors using the term to mean only \textit{mediated} presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}. Visualised using the combined Milgram/Waterworth model, established presence questionnaires in this vein largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence is here considered under the Slater and Steed definition (see discussion in section \ref{background-breaks-in-presence}) as a shift upon the locus of attention axis from VR to RW.
 
 In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim was to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the Waterworth definition, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studied the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
 
