Collaborations & Publications section, also future work updated.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -33,7 +33,7 @@ Due to the diverse approaches that have been used in the application of visualiz
 \begin{figure}[h]
 \centering
   \includegraphics[width=.7\linewidth]{taxonomy_1.png}
-  \caption{Taxonomical space of visualization strategies used in cultural heritage~\cite{Foni2010}, image courtesy Nadia Magnenat-Thalmann.}
+  \caption{Taxonomical space of visualization strategies used in cultural heritage~\cite{Foni2010}, image courtesy George Papagiannakis.}
   \label{taxonomy_1.png}
 \end{figure}
 
@@ -48,7 +48,7 @@ The shading of each point within the cube represents its degree of virtuality, c
 \begin{figure}[h]
 \centering
   \includegraphics[width=.8\linewidth]{taxonomy_2.png}
-  \caption{Coordinate sets for each approach within the taxonomical space of figure \ref{taxonomy_1.png} ~\cite{Foni2010}, image courtesy Nadia Magnenat-Thalmann.}
+  \caption{Coordinate sets for each approach within the taxonomical space of figure \ref{taxonomy_1.png} ~\cite{Foni2010}, image courtesy George Papagiannakis.}
   \label{taxonomy_2.png}
 \end{figure}
 
