--- a/thesis.tex
+++ b/thesis.tex
@@ -187,6 +187,16 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
+\chapter*{Note on Web Based Resources}
+\input{hyperlinks.tex}
+
+% ======= ======= ======= ======= ======= ======= =======
+
+\chapter*{Collaborations and Publications}
+\input{collaborations.tex}
+
+% ======= ======= ======= ======= ======= ======= =======
+
 \tableofcontents
 
 % ======= ======= ======= ======= ======= ======= =======
@@ -248,9 +258,9 @@
 
 \begin{appendices}
 
-\chapter{Publications}
-\label{publications}
-\input{publications.tex}
+%\chapter{Publications}
+%\label{publications}
+%\input{publications.tex}
 
 \chapter{Stage 1 Evaluation 12-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-1.pdf}
