--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -47,7 +47,7 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 
 \section{Future Work}
 
-The introduction of parallel reality in this thesis along with the investigation of its first involved implementations in the VTW and Mirrorshades platforms is only the beginning of en extended course of study that will be required to fully understand and come to appreciate the benefits that the concept can provide. The following discussion highlights but a few choice avenues that the investigation into parallel reality would do well to explore and should by no means be considered an exhaustive list of possible sources of extension.
+The introduction of parallel reality in this thesis along with the investigation of its first involved implementations in the VTW and Mirrorshades platforms is only the beginning of en extended course of study that will be required to fully understand and come to appreciate the benefits that it can provide as a concept. The following discussion highlights but a few choice avenues that the investigation into parallel reality would do well to explore and should by no means be considered an exhaustive list of possible sources of extension. Since its recent rejuvenation at the hands of Oculus, the field of virtual reality has seen its rate of progress and advancement massively accelerated. With this in mind, the potential of these avenues of further investigation into the parallel reality concept to produce fruitful research is substantial.
 
 Most evident is the matter of hardware. The Mirrorshades parallel reality platform used in the case study presented in this thesis is a somewhat cumbersome package of HMD, laptop, battery pack, smartphone, games console controller and myriad cables, occupying both of the user's hands and requiring them to carry a satchel of not insubstantial size and weight. To posit that the cumbersome nature of the platform had a directly detrimental effect upon the quality of experience received by the participants is no stretch of the imagination and improvements in this regard will be required for parallel reality to see deployment and use in anything but controlled laboratory or user study conditions. As discussed in section \ref{mobile-client} we are already beginning to see the advent of hardware platforms that present a much improved basis for parallel reality experiences. A platform such as Samsung Gear VR, perhaps modified with stereo video see-through abilities, would represent a fully contained single unit parallel reality experience, suitable for handing to a user in the same manner that audio guides are given out at many of the world's museums. Google's Cardboard platform\footnote{\url{https://www.google.com/get/cardboard/}} also presents an intriguing possibility for future parallel reality implementations at very low cost, making use of nothing more than a folded piece of cardboard and two plastic lenses combined with any of a wide variety of smartphones to form a rudimentary HMD which users could bring to their eyes to perform a transition into VR and remove when they wish to view their real surroundings again. Furthermore, improvements to the performance of the platforms, in terms of the visual acuity of both real and virtual content as well as the accuracy of the positioning and registration, will present beneficial results both to casual users and to experts wishing to use such a modality of interaction for serious study. 
 
