--- a/collaborations.tex
+++ b/collaborations.tex
@@ -1,4 +1,4 @@
-While the majority of the work presented in this thesis was undertaken by myself, it would not have been possible without the contributions of various collaborators. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in both the Virtual Time Window and Mirrorshades projects, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to the reconstruction processes.
+While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for various collaborations. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in both the Virtual Time Window and Mirrorshades projects, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes.
 
 %=====================
 
@@ -33,7 +33,7 @@ In relation to the Virtual Time Window project (see chapter \ref{chapter-vtw}), 
 
 %=====================
 
-The Cathedral reconstruction that the Virtual Time Window project made use of is covered in greater detail in:
+The Cathedral reconstruction that the Virtual Time Window project (see chapter \ref{chapter-vtw}) made use of is covered in greater detail in:
 
 \begin{itemize}
 
