Objectives & Methodology section.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -83,6 +83,64 @@ The contributions of this thesis can be summarized as follows:
 
 %=========================================================================================================
 
+\section{Objectives and Methodology}
+
+The design and development of a new category of alternate reality naturally requires a thorough comprehension and understanding of existing theoretical frameworks. However to ascertain the worth of a new alternate reality it is all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} the experience in order for there to be something to base an assessment upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios in related contexts, assessment of a new alternate reality requires that it be deployed and not remain a thought experiment or theoretical framework.
+
+\begin{quote}
+	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
+\end{quote}
+
+
+
+Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''}
+
+
+
+\ref{chapter-background}
+The approach to this investigation involved first developing a well defined set of definitions for different alternate realities, in order to correctly situate the new paradigm of parallel reality against them and to inform its implementation from the findings and advice of other previously established alternate reality paradigms and their real world investigations.
+
+
+
+
+The worth of the parallel reality paradigm however, cannot truly be assessed through purely theoretical means. While one can postulate as to the experiential aspects of such a system and how they will affect particular tasks and scenarios, it is only through actual creation and application that such postulations can be corroborated or refuted.
+
+Thus after the creation of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop actual parallel reality systems which could then be applied to real world user studies to allow collection of empirical evidence in the real world.
+
+
+\ref{chapter-vtw} \ref{chapter-mirrorshades}
+First the Virtual Time Window platform explored the potential suitability of an existing alternate reality modality to serve as a platform for the investigation of parallel reality experience and subsequently the Mirrorshades platform was developed as an entirely new modality to better realise the envisaged experience of parallel reality.
+
+
+\ref{chapter-eval-1}
+The measure of success for this platform was based upon a comparison to previously explored alternate reality experiences in similar settings, by application to a use case within the field of virtual heritage, comparing a seated virtual reality experience of virtual reconstructions of heritage content against the same content experienced as part of a parallel reality.
+
+\ref{chapter-eval-2}
+With the success of the platform strongly indicated by these user studies, further study was undertaken to shed light onto how different aspects of the implementation of a parallel reality experience either negatively or positively affected the user experience, allowing for the construction of a set of best practice recommendations for future parallel reality endeavours.
+
+
+
+requiring the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the system, as it is different to anything that came before
+
+
+
+The fundamental research objectives addressed by this thesis are thus:
+
+\begin{enumerate}
+	\item Introduce the parallel reality concept by situating it within the larger ecosystem of alternate realities, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, updating those where required.
+	
+	\item Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different parallel reality implementations.
+	
+	\item Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous alternate reality experiences.
+	
+	\item Identify and effect suitable assessment approaches to ascertain the worth of parallel reality in comparison to previous alternate reality experience.
+	
+	\item Identify aspects of a parallel reality system that are expected to positively or negatively effect the user experience, along with assessment methodologies to ascertain such effects and apply these to real world user studies.
+	
+\end{enumerate}
+
+%=========================================================================================================
+
 \section{Document Overview}
 
 Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the investigation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different manners of parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
