--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -97,7 +97,7 @@ Whilst one could argue that the experience of using a sitsim platform is similar
 \begin{figure}[h]
 \centering
   \includegraphics[width=.6\linewidth]{sitsim-1.png}
-  \caption{The two complete environments of a sitsim platform~\cite{Liestøl2011}, image courtesy of Springer.}
+  \caption{The two complete environments of a sitsim platform~\cite{Liestøl2011}, with kind permission from Springer Science and Business Media.}
   \label{sitsim-1.png}
 \end{figure}
 
