--- a/bib.bib
+++ b/bib.bib
@@ -85,15 +85,6 @@ url = {http://www.research.ibm.com/people/k/koved/papers/rc16446.html},
 volume = {1},
 year = {1992}
 }
-@article{Applin2012,
-abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
-author = {Applin, Sally A},
-journal = {Policy},
-number = {February},
-title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
-url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
-year = {2012}
-}
 @article{Applin2011,
 abstract = {Contribute to the workshop with our understanding of humans, culture and group behavior and to learn from others what type of group behavior is expected as new technologies and their subsequent experiences are created for human use. When we discuss human group behavior, we refer to the definition of a social group: a collection of humans who repeatedly interact within a system. Humans can, and do switch context between environments and blend traces of one into the other in a socially unconscious manner often seemingly simultaneously. We propose that the cultures and behaviors of humans are increasingly actively permeating Internet and network- based applications, as well as those that are geolocal. With the future Internet of things, Dual Reality and Mixed Reality, the opportunity for humans to extend their own blended reality, as well as to create new ones is unfolding. That said, because humans interact within groups, the multiplexing of their mutual blended realities rapidly creates a PoSR. Sorting out the relationships between realities as well as between synchronous and asynchronous time and geolocal space can create a condition where realities are simultaneous and the idea of 'x' can be perceived as equaling 'not x.' We explore this new type of interoperability between virtual and physical, ideational and material, representations and objects and culture.},
 author = {Applin, Sally A},
@@ -103,6 +94,15 @@ pages = {11--14},
 title = {{A Cultural Perspective on Mixed , Dual and Blended Reality}},
 url = {http://www.anthropunk.com/xwiki/wiki/anthropunk/download/Main/WebHome/ACulturalPerspectiveApplinFischer.pdf},
 year = {2011}
+}
+@article{Applin2012,
+abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
+author = {Applin, Sally A},
+journal = {Policy},
+number = {February},
+title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
+url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
+year = {2012}
 }
 @article{Applin2011a,
 abstract = {We consider some possible broad changes that may impact society as a whole as a result of widespread integration of full-spectrum deployed pervasive computing technologies. Our approach considers design challenges for successfully developing and integrating pervasive technologies into culture and society. This is particularly challenging, since pervasive technologies as services are most successful when transparent, invisible, overlooked, unacknowledged and seemingly forgotten by the very groups that embrace their usage and development. We suggest a heuristic for understanding pervasive technology from an anthropological/social perspective, along with a reminder that humans create, shape and use the technologies that affect them. In particular, we look at the impact on social relations in a poly-social world where people must develop means to blend their own realities with those of of others. In conclusion, we remind those developing these technologies, that although we will eventually become wedded and intertwined as cyborgs within this new environment, it may have a positive outcome, creating new social group models for human interaction.},
@@ -142,9 +142,15 @@ url = {http://jitso.org/2012/12/03/visualising-polysocial-reality-revised/},
 urldate = {2013-02-21},
 year = {2012}
 }
+@article{Archer1995,
+author = {Archer, Bruce},
+journal = {Co-Design: the Interdisciplinary Journal of Design and Contextual Studies},
+pages = {6--13},
+title = {{The Nataure of Research}},
+year = {1995}
+}
 @inproceedings{ardito:combining,
 address = {New York, NY, USA},
-annote = {Introduces the CHeR model, for creating, converting into digital form \& maintaining the multitude of data related to cultural heritage sites. Observes that cultural heritage sites often arouse little involvement in young people, particularly when presented with the ruins of ancient settlements whose current appearance no longer reflects their original aspect and purpose.},
 author = {Ardito, Carmelo and Costabile, Maria Francesca and Lanzilotti, Rosa and Simeone, Adalberto Lafcadio},
 booktitle = {Proceedings of the 2010 ACM workshop on Social, adaptive and personalized multimedia interaction and access},
 doi = {http://doi.acm.org/10.1145/1878061.1878077},
@@ -677,6 +683,14 @@ title = {{Indoor Location Sensing Using Geo-Magnetism}},
 url = {http://portal.acm.org/citation.cfm?doid=1999995.2000010},
 year = {2011}
 }
+@article{Chynoweth2014,
+author = {Chynoweth, Paul},
+file = {:home/cj/Chynoweth\%28ProfDoc-Methodology\%29.pdf:pdf},
+journal = {Proceedings of the 4th International Conference on Professional Doctorates (ICPD-2014)},
+pages = {1--5},
+title = {{Professional doctorate research methodologies : new possibilities from beyond the social sciences}},
+year = {2014}
+}
 @article{Cirio2013,
 author = {Cirio, Gabriel and Olivier, Anne-H\'{e}l\`{e}ne and Marchal, Maud and Pettr\'{e}, Julien},
 doi = {10.1109/TVCG.2013.34},
@@ -841,6 +855,12 @@ publisher = {Oxford University Press},
 title = {{The Virtuality and Reality of Avatar Cyberspace}},
 year = {2014}
 }
+@misc{Daviesb,
+author = {Davies, C J},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
+urldate = {2013-04-01}
+}
 @misc{Davies,
 author = {Davies, C J},
 title = {{Arduino sketch for Pangolin}},
@@ -857,12 +877,6 @@ urldate = {2013-04-01}
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
-urldate = {2013-04-01}
-}
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {2013-04-01}
 }
 @inproceedings{Davies2012,
@@ -1210,6 +1224,13 @@ pages = {256},
 title = {{Mirror Worlds: or the Day Software Puts the Universe in a Shoebox...How It Will Happen and What It Will Mean}},
 year = {1993}
 }
+@misc{Gelissen2008,
+author = {Gelissen, Jean},
+publisher = {International Organization for Standardization},
+title = {{Summary of MPEG-V}},
+url = {http://mpeg.chiariglione.org/working\_documents.php},
+year = {2008}
+}
 @article{Gelissen2009,
 annote = {From Duplicate 1 ( Introduction to MPEG-V - Gelissen, Jean )},
 author = {Gelissen, Jean},
@@ -1220,13 +1241,6 @@ title = {{Introduction to MPEG-V}},
 url = {http://journals.tdl.org/jvwr/article/view/742/533},
 volume = {2},
 year = {2009}
-}
-@misc{Gelissen2008,
-author = {Gelissen, Jean},
-publisher = {International Organization for Standardization},
-title = {{Summary of MPEG-V}},
-url = {http://mpeg.chiariglione.org/working\_documents.php},
-year = {2008}
 }
 @article{Gelissen2011,
 abstract = {In this issue, we report on the first phase of MPEG-V, a work that started in 2007. MPEG-V was conceived as a unified effort to develop standards within virtual worlds, and between virtual worlds and real worlds. This work culminated in the publication of the ISO/IEC MPEG-V 'Media context and control' standards in January 2011. The papers in this issue of the Journal of Virtual World Research expose both the many current standards for virtual worlds, as well as the many missing standards. As such, the issue hints at many more places where standards are needed. To fulfill the potential of virtual worlds much more standardization (MPEG-V, and other standards) is needed.},
@@ -1400,17 +1414,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Harta,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-03-31}
-}
 @misc{Hart,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-04-01}
+}
+@misc{Harta,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-03-31}
 }
 @inproceedings{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1563,12 +1577,6 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {2013-03-28},
 year = {2013}
 }
-@misc{Hughes2006,
-author = {Hughes, Ian},
-title = {{Lessons from second life}},
-url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
-year = {2006}
-}
 @misc{Hughes2009,
 author = {Hughes, Ian},
 title = {{Wimbledon – A fanployee perspective}},
@@ -1595,6 +1603,12 @@ author = {Hughes, Ian},
 title = {{Well it got my attention – Second Life}},
 url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
 urldate = {2012-05-21},
+year = {2006}
+}
+@misc{Hughes2006,
+author = {Hughes, Ian},
+title = {{Lessons from second life}},
+url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
 year = {2006}
 }
 @misc{Hunt,
@@ -2151,6 +2165,18 @@ title = {{The digital Michelangelo project: 3D scanning of large statues}},
 url = {http://dl.acm.org/citation.cfm?id=344779.344849 http://dx.doi.org/10.1145/344779.344849},
 year = {2000}
 }
+@incollection{Liestøl2012,
+author = {Liest\o l, Gunnar},
+booktitle = {Progress in Cultural Heritage Preservation},
+doi = {10.1007/978-3-642-34234-9\_64},
+editor = {Ioannides, M and Fritsch, D and Leissner, J and Davies, R and Remondino, F and Caffo, R},
+isbn = {978-3-642-34233-2},
+pages = {618--627},
+publisher = {Springer Berlin Heidelberg},
+title = {{Solving the Centre–Periphery Problem in Cultural Heritage by Means of Situated Simulations}},
+url = {http://link.springer.com/chapter/10.1007/978-3-642-34234-9\_64},
+year = {2012}
+}
 @inproceedings{Liestøl2009,
 abstract = {In digital media - including augmented reality research - rapid change continue to take place at the levels of hardware and software. This paper focus on a third layer in a hierarchy of digital media - meaningware. Meaningware is the domain of digital textuality, its genres and conventions - all key subject matters of the humanities. To prevent cultural lag at the textual level the conduct of genre design is suggested as a methodological approach. The potential 'genre' experimented with here is a type of augmented reality system we have named Situated Simulations. The system takes advantage of the convergence of mobility, broadband, rich graphics capabilities and positioning/orientation technologies, on off the shelf mobile phones. The current platform applied is Apple's iPhone. The paper describes the development of three prototyped situated simulations designed for use in both learning and tourism. Interface and design issues are discussed, and a perspective on the epistemological increment of augmented reality and situated simulations is related to Bateson's notion of double descriptions.},
 author = {Liest\o l, Gunnar},
@@ -2174,18 +2200,6 @@ publisher = {Springer New York},
 title = {{Situated Simulations Between Virtual Reality and Mobile Augmented Reality: Designing a Narrative Space}},
 url = {http://link.springer.com/chapter/10.1007\%2F978-1-4614-0064-6\_14},
 year = {2011}
-}
-@incollection{Liestøl2012,
-author = {Liest\o l, Gunnar},
-booktitle = {Progress in Cultural Heritage Preservation},
-doi = {10.1007/978-3-642-34234-9\_64},
-editor = {Ioannides, M and Fritsch, D and Leissner, J and Davies, R and Remondino, F and Caffo, R},
-isbn = {978-3-642-34233-2},
-pages = {618--627},
-publisher = {Springer Berlin Heidelberg},
-title = {{Solving the Centre–Periphery Problem in Cultural Heritage by Means of Situated Simulations}},
-url = {http://link.springer.com/chapter/10.1007/978-3-642-34234-9\_64},
-year = {2012}
 }
 @incollection{Liestøl2014,
 author = {Liest\o l, Gunnar and Morrison, A},
@@ -2216,6 +2230,23 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {2012-05-21},
 year = {2006}
 }
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
+}
+@phdthesis{Lifton2007a,
+address = {Department of Media Arts and Sciences},
+annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
+author = {Lifton, Joshua},
+month = sep,
+school = {Massachusetts Institute of Technology},
+title = {{Dual Reality: An Emerging Medium}},
+type = {Ph.D. Dissertation},
+year = {2007}
+}
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
                 
@@ -2245,23 +2276,6 @@ publisher = {IEEE},
 title = {{Consumer Adoption of Cross Reality Systems}},
 url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
 year = {2010}
-}
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
-@phdthesis{Lifton2007a,
-address = {Department of Media Arts and Sciences},
-annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
-author = {Lifton, Joshua},
-month = sep,
-school = {Massachusetts Institute of Technology},
-title = {{Dual Reality: An Emerging Medium}},
-type = {Ph.D. Dissertation},
-year = {2007}
 }
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
@@ -2509,11 +2523,6 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
-}
 @article{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas: 1. the idea of constructing special eyeglasses to modify how he saw the world; and 2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life. Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.},
 author = {Mann, Steve},
@@ -2522,6 +2531,11 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
+}
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
 }
 @article{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2715,17 +2729,17 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
-}
 @misc{MIT,
 annote = {From Duplicate 1 ( Responsive Environments Group - MIT )},
 author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
+}
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2813,12 +2827,6 @@ url = {https://journals.tdl.org/jvwr/article/view/660/536},
 volume = {2},
 year = {2009}
 }
-@misc{OpenGeospatialConsortium,
-annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
-author = {{Open Geospatial Consortium}, Inc.},
-title = {{OWS-4 Demonstration}},
-url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
-}
 @misc{OpenGeospatialConsortiuma,
 annote = {        From Duplicate 1 (                           Welcome to the GSN Project                         - Open Geospatial Consortium, Inc. )
                 
@@ -2829,6 +2837,12 @@ author = {{Open Geospatial Consortium}, Inc.},
 howpublished = {$\backslash$url\{http://sourceforge.net/apps/trac/gsn/\}},
 title = {{Welcome to the GSN Project}},
 url = {http://sourceforge.net/apps/trac/gsn/}
+}
+@misc{OpenGeospatialConsortium,
+annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
+author = {{Open Geospatial Consortium}, Inc.},
+title = {{OWS-4 Demonstration}},
+url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
 }
 @misc{OpenVirtualWorldsgroupSchoolofComputerScience,
 author = {{Open Virtual Worlds group, School of Computer Science}, University of St Ancrews},
@@ -2895,6 +2909,15 @@ pages = {165--174},
 title = {{Supporting interoperability and presence awareness in collaborative mixed reality environments}},
 year = {2013}
 }
+@article{Papagiannakis2009,
+abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
+author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
+journal = {Arqueologica 2.0},
+pages = {16--20},
+title = {{Recreating Daily Life in Pompeii}},
+volume = {1},
+year = {2009}
+}
 @article{Papagiannakis2007,
 abstract = {We propose a new methodology for real-time mobile mixed reality systems that feature realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. Although ini- tially targeted at Cultural Heritage Sites, the paradigm is by no means limited to such subjects. The abandonment of traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations with 3D, interactive, augmented histori- cal character-based event representations in a mobile and wearable setup, is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with character to object interaction, a markerless camera tracker specialized for non-invasive geometrical registration on heritage sites and a PRT mixed reality illumination model for more consistent real-virtual real-time rendering. We demonstrate a real-time case study on the actual site of ancient Pompeii. PDF},
 author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
@@ -2907,15 +2930,6 @@ title = {{Mobile Augmented Heritage: Enabling Human Life in Ancient Pompeii}},
 url = {http://openurl.ingenta.com/content/xref?genre=article\&issn=1478-0771\&volume=5\&issue=2\&spage=396},
 volume = {5},
 year = {2007}
-}
-@article{Papagiannakis2009,
-abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
-author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
-journal = {Arqueologica 2.0},
-pages = {16--20},
-title = {{Recreating Daily Life in Pompeii}},
-volume = {1},
-year = {2009}
 }
 @article{Papagiannakis2005,
 abstract = {This paper presents an innovative 3D reconstruction of ancient fresco paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial-life dramaturgical behaviours in an immersive, fully mobile augmented reality (AR) environment. The main goal is to push the limits of current AR and virtual storytelling technologies and to explore the processes of mixed narrative design of fictional spaces (e.g. fresco paintings) where visitors can experience a high degree of realistic immersion. Based on a captured/real-time video sequence of the real scene in a video-see-through HMD set-up, these scenes are enhanced by the seamless accurate real-time registration and 3D rendering of realistic complete simulations of virtual flora and fauna (virtual humans and plants) in a real-time storytelling scenario-based environment. Thus the visitor of the ancient site is presented with an immersive and innovative multi-sensory interactive trip to the past. Copyright (c) 2005 John Wiley T Sons, Ltd.},
@@ -3169,12 +3183,6 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
-@article{Regenbrecht1992,
-author = {Regenbrecht, Holger and Schubert, Thomas},
-keywords = {augmented reality,sense of presence},
-title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
-year = {1992}
-}
 @inproceedings{Regenbrecht2002,
 author = {Regenbrecht, Holger and Schubert, Thomas},
 booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
@@ -3191,6 +3199,12 @@ pages = {425--434},
 title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
 volume = {11},
 year = {2002}
+}
+@article{Regenbrecht1992,
+author = {Regenbrecht, Holger and Schubert, Thomas},
+keywords = {augmented reality,sense of presence},
+title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
+year = {1992}
 }
 @article{Reilly2010,
 abstract = {We introduce TwinSpace, a flexible software infrastructure for combining interactive workspaces and collaborative virtual worlds. Its design is grounded in the need to support deep connectivity and flexible mappings between virtual and real spaces to effectively support collaboration. This is achieved through a robust connectivity layer linking heterogeneous collections of physical and virtual devices and services, and a centralized service to manage and control mappings between physical and virtual. In this paper we motivate and present the architecture of TwinSpace, discuss our experiences and lessons learned in building a generic framework for collaborative cross-reality, and illustrate the architecture using two implemented examples that highlight its flexibility and range, and its support for rapid prototyping.},
@@ -3240,14 +3254,6 @@ title = {{Responsive Environments Group - Research Themes}},
 url = {http://resenv.media.mit.edu/motto.html},
 urldate = {2012-05-18}
 }
-@book{Rheingold1992,
-author = {Rheingold, Howard},
-isbn = {978-0671778972},
-pages = {416},
-publisher = {Simon \& Schuster},
-title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
-year = {1992}
-}
 @book{Rheingold2000,
 address = {Cambridge, MA},
 author = {Rheingold, Howard},
@@ -3257,6 +3263,14 @@ pages = {447},
 publisher = {The MIT Press},
 title = {{The Virtual Community: Homesteading on the Electronic Frontier}},
 year = {2000}
+}
+@book{Rheingold1992,
+author = {Rheingold, Howard},
+isbn = {978-0671778972},
+pages = {416},
+publisher = {Simon \& Schuster},
+title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
+year = {1992}
 }
 @inproceedings{Richardson2004,
 address = {New York, New York, USA},
@@ -3473,6 +3487,16 @@ keywords = {Passive Haptics,Substitutional Reality,Virtual Reality},
 title = {{Substitutional Reality : Using the Physical Environment to Design Virtual Reality Experiences}},
 year = {2015}
 }
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
+}
 @article{Sevan2008,
 author = {Sivan, Yesha},
 issn = {19418477},
@@ -3509,16 +3533,6 @@ title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
 url = {http://journals.tdl.org/jvwr/article/view/359},
 volume = {1},
 year = {2008}
-}
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
 }
 @article{Slater1999,
 abstract = {Explains why for not using the Witmer and Singer questionnaire for eliciting presence in virtual environments and a person's immersive tendencies. Differences in the definition of presence; Three aspects of presence; Factors that influence presence; Opinion on the questionnaire's design and methodology.},
@@ -3899,12 +3913,6 @@ publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as ``Space of Illusion'' in Museum Displays}},
 year = {2002}
 }
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
-}
 @misc{U-bloxAGa,
 author = {u-blox AG},
 title = {{u-center GPS evaluation software}},
@@ -3916,6 +3924,12 @@ author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {2013-02-11}
+}
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
 }
 @misc{UgoTrade2007,
 annote = {From Duplicate 1 ( EOLUS Makes Leap To 3D Internet On Second Life - UgoTrade )},
